Add Azure template types
