# cloud/provision/types/azure_r_m_network_security_group_configuration.go
@@ -1,0 +1,89 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// AzureRMNetworkSecurityGroupConfiguration azure r m network security group configuration
+// swagger:model AzureRMNetworkSecurityGroupConfiguration
+type AzureRMNetworkSecurityGroupConfiguration struct {
+
+	// location
+	Location string `json:"location,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// resource group name
+	ResourceGroupName string `json:"resource_group_name,omitempty"`
+
+	// security rule
+	SecurityRule []*AzureRMNetworkSecurityRule `json:"security_rule"`
+}
+
+// Validate validates this azure r m network security group configuration
+func (m *AzureRMNetworkSecurityGroupConfiguration) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateSecurityRule(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AzureRMNetworkSecurityGroupConfiguration) validateSecurityRule(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.SecurityRule) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.SecurityRule); i++ {
+		if swag.IsZero(m.SecurityRule[i]) { // not required
+			continue
+		}
+
+		if m.SecurityRule[i] != nil {
+			if err := m.SecurityRule[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("security_rule" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AzureRMNetworkSecurityGroupConfiguration) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AzureRMNetworkSecurityGroupConfiguration) UnmarshalBinary(b []byte) error {
+	var res AzureRMNetworkSecurityGroupConfiguration
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
