# cloud/provision/types/azure_r_m_subnet_configuration.go
@@ -1,0 +1,52 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// AzureRMSubnetConfiguration azure r m subnet configuration
+// swagger:model AzureRMSubnetConfiguration
+type AzureRMSubnetConfiguration struct {
+
+	// address prefix
+	AddressPrefix string `json:"address_prefix,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// resource group name
+	ResourceGroupName string `json:"resource_group_name,omitempty"`
+
+	// virtual network name
+	VirtualNetworkName string `json:"virtual_network_name,omitempty"`
+}
+
+// Validate validates this azure r m subnet configuration
+func (m *AzureRMSubnetConfiguration) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AzureRMSubnetConfiguration) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AzureRMSubnetConfiguration) UnmarshalBinary(b []byte) error {
+	var res AzureRMSubnetConfiguration
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
