# cloud/provision/types/azure_r_m_virtual_machine_storage_o_s_disk.go
@@ -1,0 +1,49 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// AzureRMVirtualMachineStorageOSDisk azure r m virtual machine storage o s disk
+// swagger:model AzureRMVirtualMachineStorageOSDisk
+type AzureRMVirtualMachineStorageOSDisk struct {
+
+	// caching
+	Caching string `json:"caching,omitempty"`
+
+	// create option
+	CreateOption string `json:"create_option,omitempty"`
+
+	// managed disk type
+	ManagedDiskType string `json:"managed_disk_type,omitempty"`
+}
+
+// Validate validates this azure r m virtual machine storage o s disk
+func (m *AzureRMVirtualMachineStorageOSDisk) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AzureRMVirtualMachineStorageOSDisk) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AzureRMVirtualMachineStorageOSDisk) UnmarshalBinary(b []byte) error {
+	var res AzureRMVirtualMachineStorageOSDisk
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
