# cloud/provision/types/azure_r_m_virtual_network.go
@@ -1,0 +1,40 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/validate"
+)
+
+// AzureRMVirtualNetwork azure r m virtual network
+// swagger:model AzureRMVirtualNetwork
+type AzureRMVirtualNetwork map[string]AzureRMVirtualNetworkConfiguration
+
+// Validate validates this azure r m virtual network
+func (m AzureRMVirtualNetwork) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	for k := range m {
+
+		if err := validate.Required(k, "body", m[k]); err != nil {
+			return err
+		}
+		if val, ok := m[k]; ok {
+			if err := val.Validate(formats); err != nil {
+				return err
+			}
+		}
+
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
